Fix: Make img only visible after ~90deg turn

--- a/css/app.css
+++ b/css/app.css
@@ -63,6 +63,9 @@ h1 {
     justify-content: center;
     align-items: center;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
+    transform: rotateY(180deg);
+    transform-style: preserve-3d;
+    transition: transform 1s ease;
 }
 
 img {
@@ -72,11 +75,14 @@ img {
 
 .deck .card.open {
     transform: rotateY(0);
-    background: #02b3e4;
     cursor: default;
 }
+/* .deck .card.open img {
+    visibility: visible;
+} */
 
 .deck .card.show {
+    background: #02b3e4;
     font-size: 33px;
 }
 .deck .card.show img {
